--- a/index.html
+++ b/index.html
@@ -1,7 +1,64 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Intorduction</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet"type="text/css"href="css/complete.css">
+    <title>Intorduction</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<body>
+  <header>
+  <nav>
+    <input id="header-toggle"type="checkbox">
+    <label class="menu-toggle-contain"for="header-toggle">
+      <div class="menu-icon"></div>
+    </label>
+    <ul class="menu">
+      <li>OsloMet</li>
+      <li>Student life</li>
+      <li>Search</li>
+      <li>Menu</li>
+    </ul>
+  </nav>
+</header>
+
+<main class="grid container">
+  <article>
+    <div class="mainbox">
+      <h1>Campus guide</h1>
+      <h2>Campuses</h2>
+      <p class="ingress">OsloMet has two campuses. Our largest campus is located in the centre of Oslo, while our other campus is in Kjeller, near the city of Lillestrøm.</p>
+      <p>Pilestredet Campus
+        OsloMet’s largest campus is located in the centre of Oslo.</p>
+      <p>Kjeller Campus
+        OsloMet’s second-largest campus lies 20 kilometers outside of Oslo in the fast-growing Romerike region.</p>  
+    </div>
+    <div class="second-box">
+    </article>
+    <aside>
+
+     
+    </div>
+  </aside>  
+  
+</main>
+<footer>
+    <div class="footerleft">
+      <p>OSLO METROPOLITIAN UNIVERSITY<br>
+      P.O.Box 4, St. Olavs plass<br>
+      NO-0130 Oslo<br>
+      Norway</p>
+    </div>
+    <div class="footermiddle">
+      <p>CONTACT INFORMATION<br>
+      Contact us:<a href="Contact us">Contact us</a><br>
+      Find us:<a href="Find us">Find us</a></p>
+    </div>
+    <div class="footerright">
+      <p>ABOUT THE WEBSITE<br>
+      Cookies:<a href="Cookies">Cookies</a><br>
+      Accessibility statement:<a href="Accessibility statement">Accessibility statement</a><br></p>
+    </div>
+</footer>
+</body>
 </html>
