Startet på campus side

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <header class="header">        <!-- header -->
   <a href="">Accessibility</a>
-  <a href="">Topical</a>
-  <a href="">Campus/building</a>
+  <a href="topicalpage.html">Topical</a>
+  <a href="campus.html">Campus/building</a>
   <a href="">Canteen</a>
 </header>
 
