La til grid og tekst

--- a/campus.html
+++ b/campus.html
@@ -6,16 +6,27 @@
     <title>Campus</title>
     <link rel="stylesheet"  href="css/style.css">
 </head>
-<body>
+<body class="campus-body">
+    <header class="header">        <!-- header -->
+            <a href="">Accessibility</a>
+            <a href="topicalpage.html">Topical</a>
+            <a href="campus.html">Campus/building</a>
+            <a href="">Canteen</a>
+        </header>
+
     <main class="main-campus">
-        <div class="grid-container">
-            <div class="grid-item-one">1</div>
-            <div class="grid-item-two"><img src="media/oslomet-p35.jpg" 
-                 alt="Pilestredet 35 interior">Source: Kevin Knutsen</div>
-            <div class="grid-item-three">3</div>
-            <div class="grid-item-four">4</div>
-            <div class="grid-item-five">5</div>
-            <div class="grid-item-six">6</div>
+        <h1 class="campus-h1">Campus on Pilestredet</h1>
+        <div class="campus-grid-container">
+            <div class="campus-grid-item-one">
+                <p>The Campus located at Pilestredet </p>
+            </div>
+            <div class="campus-grid-item-two"><img id="img-p35" src="media/oslomet-p35.jpg" 
+                 alt="Pilestredet 35 interior">
+                 <span id="campus-photo-credit">Source: Kevin Knutsen</span></div>
+            <div class="campus-grid-item-three">3</div>
+            <div class="campus-grid-item-four">4</div>
+            <div class="campus-grid-item-five">5</div>
+            <div class="campus-grid-item-six">6</div>
         </div>
     </main>
     
