--- a/topicalpage.html
+++ b/topicalpage.html
@@ -17,6 +17,8 @@
     <p>An estimated 2,5 billion people in the world do not yet have access to the internet. To overcome the physical limitations of internet cables,
         companies like Starlink and the EU are working on providing internet access through satellites. Elon Musk’s <a target="_blank" href="https://www.starlink.com/">Starlink</a> is today the largest
         global provider of satellite internet with over 4,500 satellites in orbit. They expect to have 42,000 new ones in orbit in the coming years.</p>
+        <img src="/media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
+        <figcaption>Foto: Jeff Ogden</figcaption>
 <h2>The Situation</h2>
 <p>The aim of satellite internet technology is to globalize internet accessibility, regardless of where people live. This will give many more people access
     to the internet, and furthermore access to a wide variety of information. Satellite internet technology provides faster internet access to some areas
