--- a/topicalpage.html
+++ b/topicalpage.html
@@ -17,9 +17,9 @@
     <p>An estimated 2,5 billion people in the world do not yet have access to the internet. To overcome the physical limitations of internet cables,
         companies like Starlink and the EU are working on providing internet access through satellites. Elon Musk’s <a target="_blank" href="https://www.starlink.com/">Starlink</a> is today the largest
         global provider of satellite internet with over 4,500 satellites in orbit. They expect to have 42,000 new ones in orbit in the coming years.</p>
-        <img src="./media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
+        <img src="media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
         <figcaption>Foto: Jeff Ogden</figcaption>
-        <img src="/media/starlink.jpg" alt="A Starlink Satellite">
+        <img src="media/starlink.jpg" alt="A Starlink Satellite">
         <figcaption>Foto: SpaceX</figcaption>
 <h2>The Situation</h2>
 <p>The aim of satellite internet technology is to globalize internet accessibility, regardless of where people live. This will give many more people access
@@ -28,7 +28,7 @@
     or terrorism. However, some aspects such as security and <a target="_blank" href="https://tech.hindustantimes.com/tech/news/giant-solar-flare-can-destroy-mobile-phones-internet-and-other-tech-find-out-how-71654855307499.html">unwanted consequences</a> will need to be considered when developing this technology.</p>
 <p>Professions within information technology will benefit from increased internet accessibility around the world, as these professions are often dependent
     on digital technology and the internet. A higher demand for people within information technology is highly likely.</p>
-    <img src="/media/itprofession.jpg" alt="Two young people viewing a code on a computer screen">
+    <img src="media/itprofession.jpg" alt="Two young people viewing a code on a computer screen">
         <figcaption>Foto: Birte Runde</figcaption>
 <p>More people worldwide will be able to have online education and access to information through increased internet accessibility. This can result in
     faster resolution of global problems. By bringing the world closer together, it grants possibilities for better cooperation and collaboration.
@@ -36,7 +36,7 @@
     to a decrease in physical activity, which may lead to health problems. New technology is a good thing since it brings in different alternatives
     and convenience to many subjects. For example, people can get better help at becoming more <a target="_blank" href="https://www.forbes.com/health/fitness/best-fitness-apps/">physically active through the use of apps</a> and video
     tutorials of different ways to exercise.</p>
-    <img src="/media/onlinecommunication.jpg" alt="A phonescreen with multiple apps for online communication">
+    <img src="media/onlinecommunication.jpg" alt="A phonescreen with multiple apps for online communication">
         <figcaption>Foto: Jason Howie/flickr.com</figcaption>
 <h2>Positives and Negatives</h2>
 <h3>Three positive aspects of increased internet access:</h3>
