Lagt til "header"

--- a/topicalpage.html
+++ b/topicalpage.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <header class="header">        <!-- header -->
+        <a href="">Accessibility</a>
+        <a href="topicalpage.html">Topical</a>
+        <a href="campus.html">Campus/building</a>
+        <a href="">Canteen</a>
+    </header>
 <main>
     <h1>The Interplay between Technology and Society</h1>
     <h2>Introduction</h2>
