--- a/topicalpage.html
+++ b/topicalpage.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
+<body class="topicalpage-body">
 
     <header class="header">
         <a href="index.html">Accessibility</a>
