Added images to campus page, as well as dummy text

--- a/campus.html
+++ b/campus.html
@@ -14,21 +14,59 @@
             <a href="">Canteen</a>
         </header>
 
-    <main class="main-campus">
-        <h1 class="campus-h1">Campus on Pilestredet</h1>
-        <div class="campus-grid-container">
-            <div class="campus-grid-item-one">
-                <p>The Campus located at Pilestredet </p>
+        <main class="main-campus">
+            <h1 class="campus-h1">Campus on Pilestredet</h1>
+            <div class="campus-grid-container">
+                <div class="campus-grid-item-one">
+                    <h2 class="campus-h2">Quisque ut nisi laoreet</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce egestas, turpis quis hendrerit ullamcorper, 
+                        risus massa posuere nibh, nec facilisis 
+                        erat sapien ac leo. Nunc non nisi metus. 
+                        Morbi euismod cursus placerat. 
+                        Nulla eget ligula sodales, sodales purus vitae, 
+                        cursus libero. Vestibulum ante ipsum primis in faucibus 
+                        orci luctus et ultrices posuere cubilia curae; 
+                        Nulla eleifend, ex id pellentesque feugiat, 
+                        sapien lacus consequat ipsum, eget ornare ex orci vitae ipsum. 
+                        Aenean ultrices arcu tellus, vitae condimentum neque imperdiet vel.
+                    </p>
+                </div>
+                <div class="campus-grid-item-two">
+                    <img class="campus-photos" src="media/p35-exterior.jpg" alt="Pilestredet 35 building">
+                </div>
+                <div class="campus-grid-item-three">
+                    <h2 class="campus-h2">Quisque rhoncus fermentum porta</h2>
+                    <p>Nullam neque nibh, dignissim elementum neque id, 
+                        viverra tincidunt ligula. Maecenas quis ex eu ex consequat fringilla. 
+                        Mauris tortor ipsum, elementum laoreet sem ac, mollis pretium metus. 
+                        Vestibulum vitae mi ullamcorper, imperdiet nisi eu, ultrices diam. 
+                        Etiam euismod massa arcu. Praesent euismod leo eget fringilla suscipit. 
+                        Aenean lorem urna, suscipit et libero eget, auctor malesuada turpis. 
+                        Phasellus porta sapien in purus vulputate, ut euismod risus pharetra. 
+                        Cras lectus nisi, bibendum non congue at, auctor eget dolor. 
+                        Duis vehicula sodales sapien et dictum. 
+                        Pellentesque consequat eu tortor vitae semper. 
+                        Pellentesque semper posuere nisl, ac pharetra nisl.
+                    </p>
+                    </div>
+                <div class="campus-grid-item-four">
+                    <img class="campus-photos" src="media/oslomet-p35.jpg" alt="Pilestredet 35 interior">
+                    <span id="campus-photo-credit">Source: Kevin Knutsen</span></div>
+                <div class="campus-grid-item-five">
+                    <h2 class="campus-h2">Vivamus vitae posuere erat</h2>
+                    <p>In blandit convallis vestibulum. 
+                        Suspendisse tincidunt ullamcorper odio, eu venenatis purus scelerisque quis. 
+                        Nam ac auctor felis. Integer vulputate pulvinar nulla, eu imperdiet mauris 
+                        fermentum quis. Nam pellentesque metus sed lectus dignissim, eget accumsan lacus 
+                        dapibus. Integer et posuere dolor, sit amet imperdiet lectus. Maecenas commodo, 
+                        nunc ac bibendum luctus, est mauris luctus orci, nec commodo mauris sapien 
+                        efficitur urna. Suspendisse tempor in elit consectetur congue.
+                    </p>
+                </div>
+                <div class="campus-grid-item-six"><img class="campus-photos" src="media/p35-climbing.jpg" alt="Indoor climbing in P35"></div>
             </div>
-            <div class="campus-grid-item-two"><img id="img-p35" src="media/oslomet-p35.jpg" 
-                 alt="Pilestredet 35 interior">
-                 <span id="campus-photo-credit">Source: Kevin Knutsen</span></div>
-            <div class="campus-grid-item-three">3</div>
-            <div class="campus-grid-item-four">4</div>
-            <div class="campus-grid-item-five">5</div>
-            <div class="campus-grid-item-six">6</div>
-        </div>
-    </main>
+        </main>
     
 </body>
 </html>
