--- a/campus.html
+++ b/campus.html
@@ -11,7 +11,7 @@
             <a href="">Accessibility</a>
             <a href="topicalpage.html">Topical</a>
             <a href="campus.html">Campus/building</a>
-            <a href="">Canteen</a>
+            <a href="canteen">Canteens</a>
         </header>
 
         <main class="main-campus">
