Endret canteen fil til canteen.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="">Accessibility</a>
   <a href="topicalpage.html">Topical</a>
   <a href="campus.html">Campus/building</a>
-  <a href="canteen">Canteens</a>
+  <a href="canteen.html">Canteens</a>
 </header>
 
 
