--- a/topicalpage.html
+++ b/topicalpage.html
@@ -14,7 +14,7 @@
         <a href="index.html">Accessibility</a>
         <a href="topicalpage.html">Topical</a>
         <a href="campus.html">Campus/building</a>
-        <a href="canteen">Canteens</a>
+        <a href="canteen.html">Canteens</a>
     </header>
 
 <main>
