--- a/campus.html
+++ b/campus.html
@@ -10,7 +10,7 @@
     <header class="header">        <!-- header -->
             <a href="">Accessibility</a>
             <a href="topicalpage.html">Topical</a>
-            <a href="campus.html">Campus/building</a>
+            <a href="campus.html">Building</a>
             <a href="canteen.html">Canteens</a>
         </header>
 
