--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="header">        <!-- header -->
   <a href="">Accessibility</a>
   <a href="topicalpage.html">Topical</a>
-  <a href="campus.html">Campus/building</a>
+  <a href="campus.html">Building</a>
   <a href="canteen.html">Canteens</a>
 </header>
 
@@ -22,7 +22,7 @@
   <h1>OlsoMet campuses guide!</h1>
   <h2>Campuses</h2>
   <div class="mainbox">             <!--grid-->
-  <p class="ingress">OsloMet has two campuses. The largest campus is located in the centre of Oslo, while the other campus is in Kjeller, near the city of Lillestrøm. </p> <!--Introduction-->
+  <p class="ingress">OsloMet has two campuses. The largest campus is located in the centre of Oslo, while the other campus is in Kjeller, near the city of Lillestrøm.<br><br> </p> <!--Introduction-->
     
   <div class="text-right">  <!--right-sided paragraph-->
   <p>Kjeller Campus OsloMet’s second-largest campus lies 20 kilometers outside of Oslo in the fast-growing Romerike region.<br><br>Here is the map <a href="">Kjeller site</a></p></div>
@@ -31,7 +31,7 @@
   <div class="photo-ref-left">photo fra OsloMet´s site</div>
    
   <div class="text-left">  <!--left-sided paragraph-->
-  <p>Pilestredet Campus OsloMet’s largest campus is located in the centre of Oslo.<br><br>Here is the map <a href="">Oslo site</a></p></div>
+  <p>Pilestredet Campus OsloMet’s largest campus is located in the centre of Oslo.<br><br><br>Here is the map <a href="">Oslo site</a></p></div>
    
   
   <div class="image-left"></div> <!--image boxes-->
