Added "Student ID" in footer

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
  <div class="container">
    <ul>
      <li><b>PAGES DESIGNED & CREATED BY</b></li>
-     <li>385509</li> 
-     <li>385530</li>
-     <li>385324</li>
+     <li>Student ID: 385509</li> 
+     <li>Student ID: 385530</li>
+     <li>Student ID: 385324</li>
   </ul>
 </div>
 
