noen endringer til side1

--- a/campus.html
+++ b/campus.html
@@ -8,10 +8,11 @@
 </head>
 <body class="campus-body">
     <header class="header">        <!-- header -->
-            <a href="">Accessibility</a>
-            <a href="topicalpage.html">Topical</a>
-            <a href="campus.html">Building</a>
-            <a href="canteen.html">Canteens</a>
+        <a href="index.html">Campuses</a>
+        <a href="topicalpage.html">Topical</a>
+        <a href="campus.html">Building</a>
+        <a href="canteen.html">Canteens</a>
+        <a href="">Accessibility</a>
         </header>
 
         <main class="main-campus">
