--- a/canteen.html
+++ b/canteen.html
@@ -11,10 +11,11 @@
 <body class="canteens-body">
     
     <header class="header">        <!-- header -->
-            <a href="index.html">Accessibility</a>
+            <a href="index.html">Campuses</a>
             <a href="topicalpage.html">Topical</a>
             <a href="campus.html">Building</a>
             <a href="canteen.html">Canteens</a>
+            <a href="">Accessibility</a>
         </header>
 
         <main class="main-canteens">
