--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
 <body>
 <header class="header">        <!-- header -->
-  <a href="">Accessibility</a>
+  <a href="index.html">Campuses</a>
   <a href="topicalpage.html">Topical</a>
   <a href="campus.html">Building</a>
   <a href="canteen.html">Canteens</a>
+  <a href="">Accessibility</a>
 </header>
 
 
@@ -34,7 +35,7 @@
   <p>Pilestredet Campus OsloMet’s largest campus is located in the centre of Oslo.<br><br><br>Here is the map <a href="">Oslo site</a></p></div>
    
   
-  <div class="image-left"></div> <!--image boxes-->
+  <div class="image-left"></div><!--image boxes-->
   <div class="image-right"></div>
       
 </article> 
