Rettet på noen små feil og startet på accessibility

--- a/campus.html
+++ b/campus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus</title>
-    <link rel="stylesheet"  href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="campus-body">
     <header class="header">        <!-- header -->
@@ -12,14 +12,14 @@
         <a href="topicalpage.html">Topical</a>
         <a href="campus.html">Building</a>
         <a href="canteen.html">Canteens</a>
-        <a href="">Accessibility</a>
-        </header>
+        <a href="accessibility.html">Accessibility</a>
+    </header>
 
         <main class="main-campus">
             <h1 class="campus-h1">Campus on Pilestredet</h1>
             <div class="campus-grid-container">
                 <div class="campus-grid-item-one">
-                    <h2 class="campus-h2">Quisque ut nisi laoreet</h2>
+                    <h2 class="campus-h2">P35</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                         Fusce egestas, turpis quis hendrerit ullamcorper, 
                         risus massa posuere nibh, nec facilisis 
@@ -35,9 +35,10 @@
                 </div>
                 <div class="campus-grid-item-two">
                     <img class="campus-photos" src="media/p35-exterior.jpg" alt="Pilestredet 35 building">
+                    <span class="campus-photo-credit">Photo: Oslomet</span>
                 </div>
                 <div class="campus-grid-item-three">
-                    <h2 class="campus-h2">Quisque rhoncus fermentum porta</h2>
+                    <h2 class="campus-h2">Unique Amenities</h2>
                     <p>Nullam neque nibh, dignissim elementum neque id, 
                         viverra tincidunt ligula. Maecenas quis ex eu ex consequat fringilla. 
                         Mauris tortor ipsum, elementum laoreet sem ac, mollis pretium metus. 
@@ -53,11 +54,10 @@
                     </div>
                 <div class="campus-grid-item-four">
                     <img class="campus-photos" src="media/oslomet-p35.jpg" alt="Pilestredet 35 interior">
-                    <span id="campus-photo-credit">Source: Kevin Knutsen</span></div>
+                    <span class="campus-photo-credit">Photo: Kevin Knutsen</span></div>
                 <div class="campus-grid-item-five">
-                    <h2 class="campus-h2">Vivamus vitae posuere erat</h2>
-                    <p>In blandit convallis vestibulum. 
-                        Suspendisse tincidunt ullamcorper odio, eu venenatis purus scelerisque quis. 
+                    <h2 class="campus-h2">A Unique Experience</h2>
+                    <p>Suspendisse tincidunt ullamcorper odio, eu venenatis purus scelerisque quis. 
                         Nam ac auctor felis. Integer vulputate pulvinar nulla, eu imperdiet mauris 
                         fermentum quis. Nam pellentesque metus sed lectus dignissim, eget accumsan lacus 
                         dapibus. Integer et posuere dolor, sit amet imperdiet lectus. Maecenas commodo, 
@@ -65,9 +65,37 @@
                         efficitur urna. Suspendisse tempor in elit consectetur congue.
                     </p>
                 </div>
-                <div class="campus-grid-item-six"><img class="campus-photos" src="media/p35-climbing.jpg" alt="Indoor climbing in P35"></div>
+                <div class="campus-grid-item-six">
+                    <img class="campus-photos" src="media/p35-climbing.jpg" alt="Indoor climbing in P35">
+                    <span class="campus-photo-credit">Photo: Oslomet</span></div>
+                </div>
             </div>
         </main>
-    
-</body>
+
+        <footer>   <!--footer, 3 columns-->
+                <div class="container">
+                    <ul>
+                        <li><b>PAGES DESIGNED & CREATED BY</b></li>
+                        <li>Student ID: 385509</li> 
+                        <li>Student ID: 385530</li>
+                        <li>Student ID: 385324</li>
+                    </ul>
+                </div>
+                <div class="container"> 
+                    <ul>
+                        <li><b>CONTACT INFORMATION</b></li>
+                        <li><a href="Contact us">Contact us</li>
+                        <li><a href="Find us">Find us</li>
+                        <li><a href="Support us">Support us</li>
+                    </ul> 
+                </div>
+                <div class="container">  
+                    <ul>
+                        <li><b>ABOUT THE WEBSITE</b></li>
+                        <li><a href="Cookies policy">Cookies policy</li>
+                        <li><a href="Accessibility statement">Accessibility statement</li>
+                    </ul>
+                </div>
+        </footer>
+    </body>
 </html>
