--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="topicalpage.html">Topical</a>
   <a href="campus.html">Building</a>
   <a href="canteen.html">Canteens</a>
-  <a href="">Accessibility</a>
+  <a href="accessibility.html">Accessibility</a>
 </header>
 
 
@@ -45,7 +45,6 @@
 
 <footer>   <!--footer, 3 columns-->
 
- <div class="footer-container">
  <div class="container">
    <ul>
      <li><b>PAGES DESIGNED & CREATED BY</b></li>
@@ -71,7 +70,7 @@
      <li><a href="Accessibility statement">Accessibility statement</li>
   </ul>
  </div>
-
+ 
 </footer>
 </body>
 </html>
