updated side1 for mobile view, updated hearder and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-<header class="header">        <!-- header -->
+<header class="header">        <!-- header/nav -->
+  
   <a href="index.html">Campuses</a>
   <a href="topicalpage.html">Topical</a>
   <a href="campus.html">Building</a>
@@ -17,33 +18,29 @@
 </header>
 
 
-<main class="grid-container">       <!--main/article-->
-<article>
+<main class="grid-container">       <!--main-->
 
-  <h1>OlsoMet campuses guide!</h1>
-  <h2>Campuses</h2>
-  <div class="mainbox">             <!--grid-->
-  <p class="ingress">OsloMet has two campuses. The largest campus is located in the centre of Oslo, while the other campus is in Kjeller, near the city of Lillestrøm.<br><br> </p> <!--Introduction-->
-    
-  <div class="text-right">  <!--right-sided paragraph-->
-  <p>Kjeller Campus OsloMet’s second-largest campus lies 20 kilometers outside of Oslo in the fast-growing Romerike region.<br><br>Here is the map <a href="">Kjeller site</a></p></div>
 
-  <div class="photo-ref-right">photo fra OsloMet´s site</div> <!--reference text to photos-->
-  <div class="photo-ref-left">photo fra OsloMet´s site</div>
-   
-  <div class="text-left">  <!--left-sided paragraph-->
-  <p>Pilestredet Campus OsloMet’s largest campus is located in the centre of Oslo.<br><br><br>Here is the map <a href="">Oslo site</a></p></div>
-   
+  <h1 class="title1">OlsoMet campuses guide!</h1>
+  <h2 class="title2">Campuses</h2>
   
-  <div class="image-left"></div><!--image boxes-->
+  <p class="ingress">OsloMet has two campuses. The largest campus is located in the centre of Oslo, while the other campus is in Kjeller, near the city of Lillestrøm.<br><br> </p>
+
+  
+  <div class="image-left"></div>
+  <div class="photo-ref-left">photos from OsloMet´s site</div>
+  <p class="text-left">Pilestredet Campus OsloMet’s largest campus is located in the centre of Oslo.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
+  
   <div class="image-right"></div>
-      
-</article> 
+  <div class="photo-ref-right">photos from OsloMet´s site</div>
+
+  <p class="text-right">Kjeller Campus OsloMet’s second-largest campus lies 20 kilometers outside of Oslo in the fast-growing Romerike region.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
+   
 </main>        <!--end of body-->
 
 
 
-<footer>   <!--footer, 3 columns-->
+<footer>   <!--footer-->
 
  <div class="container">
    <ul>
