--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
 
   <p class="text-right">Kjeller Campus OsloMet’s second-largest campus lies 20 kilometers outside of Oslo in the fast-growing Romerike region.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
    
-</main>        <!--end of body-->
+</main>     
 
-
-
-<footer>   <!--footer-->
-
- <div class="container">
+<footer> 
+ <div class="footer-container">
    <ul>
      <li><b>PAGES DESIGNED & CREATED BY</b></li>
      <li>Student ID: 385509</li> 
@@ -51,7 +48,7 @@
   </ul>
 </div>
 
-<div class="container"> 
+<div class="footer-container"> 
   <ul>
      <li><b>CONTACT INFORMATION</b></li>
      <li><a href="Contact us">Contact us</li>
@@ -60,7 +57,7 @@
   </ul> 
 </div>
 
- <div class="container">  
+ <div class="footer-container">  
   <ul>
      <li><b>ABOUT THE WEBSITE</b></li>
      <li><a href="Cookies policy">Cookies policy</li>
