Gjorde grid omigjen på campus page

--- a/campus.html
+++ b/campus.html
@@ -17,7 +17,7 @@
 
         <main class="main-campus">
             <h1 class="campus-h1">Campus on Pilestredet</h1>
-            <div class="campus-grid-container">
+            <div class="campus-container">
                 <div class="campus-grid-item-one">
                     <h2 class="campus-h2">P35</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
