added comments in codes, added mobile view picture width at 100%

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header class="header">        <!-- header/nav -->
+<header class="header">        <!-- header/nav to 5 internal pages containing 1*5 grid for PC and 2*3 for mobile view-->
   
   <a href="index.html">Campuses</a>
   <a href="topicalpage.html">Topical</a>
@@ -18,7 +18,7 @@
 </header>
 
 
-<main class="grid-container">       <!--main-->
+<main class="grid-container">       <!--main 6*3 grid for each section, texts and photos copied from OlsoMet´s website-->
 
 
   <h1 class="title1">OlsoMet campuses guide!</h1>
@@ -39,7 +39,7 @@
 </main>     
 
 <footer> 
- <div class="footer-container">
+ <div class="footer-container"> <!--3 columns in 1*3 grid-->
    <ul>
      <li><b>PAGES DESIGNED & CREATED BY</b></li>
      <li>Student ID: 385509</li> 
