--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 </header>
 
 
-<main class="grid-container">       <!--main 6*3 grid for each section, texts and photos copied from OlsoMet´s website-->
+<main class="grid-container">       <!--main 6*3 grid for each section, photos copied from OlsoMet´s website-->
 
 
   <h1 class="title1">OlsoMet campuses guide!</h1>
   <h2 class="title2">Campuses</h2>
   
-  <p class="ingress">OsloMet has two campuses. The largest campus is located in the centre of Oslo, while the other campus is in Kjeller, near the city of Lillestrøm.<br><br> </p>
+  <p class="ingress">There are two OlsoMet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
 
   
   <div class="image-left"></div>
   <div class="photo-ref-left">photos from OsloMet´s site</div>
-  <p class="text-left">Pilestredet Campus OsloMet’s largest campus is located in the centre of Oslo.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
+  <p class="text-left">Pilestredet Campus is the main OsloMet’s campus, and it takes less than 10 min from the central station centre to get there.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
   
   <div class="image-right"></div>
   <div class="photo-ref-right">photos from OsloMet´s site</div>
 
-  <p class="text-right">Kjeller Campus OsloMet’s second-largest campus lies 20 kilometers outside of Oslo in the fast-growing Romerike region.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
+  <p class="text-right">Kjeller Campus is located in Lillestrøm which is only 20 kilometers outside of Oslo and with good connections of public transport.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
    
 </main>     
 
