--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
   
   <div class="image-left"></div>
-  <div class="photo-ref-left">photos from OsloMet´s site</div>
+  <div class="photo-ref-left">Photo: Oslomet</div>
   <p class="text-left">Pilestredet Campus is the main OsloMet’s campus, and it takes less than 10 min from the central station centre to get there.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
   
   <div class="image-right"></div>
-  <div class="photo-ref-right">photos from OsloMet´s site</div>
+  <div class="photo-ref-right">Photo: Oslomet</div>
 
   <p class="text-right">Kjeller Campus is located in Lillestrøm which is only 20 kilometers outside of Oslo and with good connections of public transport.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
    
