Endret font-weight h2 og undertittel på building

--- a/campus.html
+++ b/campus.html
@@ -53,7 +53,7 @@
                     <img class="campus-photos" src="media/oslomet-p35.jpg" alt="Pilestredet 35 interior">
                     <span class="campus-photo-credit">Photo: Kevin Knutsen</span></div>
                 <div class="campus-grid-item-five">
-                    <h2 class="campus-h2">A Unique Experience</h2>
+                    <h2 class="campus-h2">A Not So Common Commonplace</h2>
                     <p>Suspendisse tincidunt ullamcorper odio, eu venenatis purus scelerisque quis. 
                         Nam ac auctor felis. Integer vulputate pulvinar nulla, eu imperdiet mauris 
                         fermentum quis. Nam pellentesque metus sed lectus dignissim, eget accumsan lacus 
