små endringer til side 1

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 <main class="grid-container">       <!--main 6*3 grid for each section, photos copied from OlsoMet´s website-->
 
 
-  <h1 class="title1">OlsoMet campuses guide!</h1>
+  <h1 class="title1">Olsomet campuses guide!</h1>
   <h2 class="title2">Campuses</h2>
   
-  <p class="ingress">There are two OlsoMet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
+  <p class="ingress">There are two Olsomet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
 
   
   <div class="image-left"></div>
   <div class="photo-ref-left">Photo: Oslomet</div>
-  <p class="text-left">Pilestredet Campus is the main OsloMet’s campus, and it takes less than 10 min from the central station centre to get there.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
+  <p class="text-left">Pilestredet Campus is the main Oslomet’s campus, and it takes less than 10 min from the central station centre to get there.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
   
   <div class="image-right"></div>
   <div class="photo-ref-right">Photo: Oslomet</div>
