La til kommentarer

--- a/canteen.html
+++ b/canteen.html
@@ -13,7 +13,7 @@
     <header class="header">        <!-- header -->
             <a href="index.html">Campuses</a>
             <a href="topicalpage.html">Topical</a>
-            <a href="campus.html">Building</a>
+            <a href="p35.html">P35</a>
             <a href="canteen.html">Canteens</a>
             <a href="accessibility.html">Accessibility</a>
         </header>
