--- a/accessibility.html
+++ b/accessibility.html
@@ -7,13 +7,13 @@
     <title>Accessibility</title>
 </head>
 <body class="accessibility-body">
-    <header class="header">        <!-- header -->
+    <header class="header">        <!-- header/nav to 5 internal pages containing 1*5 grid for PC and 2*3 for mobile view-->
         <a href="index.html">Campuses</a>
         <a href="topicalpage.html">Topical</a>
-        <a href="campus.html">Building</a>
+        <a href="p35.html">P35</a>
         <a href="canteen.html">Canteens</a>
         <a href="accessibility.html">Accessibility</a>
-    </header>
+      </header>
 
     <main class="accessibility-main">
         <h1>Accessibility</h1>
