Css topical test

--- a/topicalpage.html
+++ b/topicalpage.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="topicalpage-body">
+<body class="topical-body">
 
     <header class="header">
      <a href="index.html">Campuses</a>
@@ -18,7 +18,7 @@
      <a href="accessibility.html">Accessibility</a>
     </header>
 
-<main>
+<main class="topical-main">
     <h1>The Interplay between Technology and Society</h1>
 
     <h2>Introduction</h2>
