--- a/topicalpage.html
+++ b/topicalpage.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="topical-body">
+<body class="topical-main">
 
     <header class="header">
      <a href="index.html">Campuses</a>
@@ -18,7 +18,7 @@
      <a href="accessibility.html">Accessibility</a>
     </header>
 
-<main class="topical-main">
+<main class="accessibility-main">
     <h1>The Interplay between Technology and Society</h1>
 
     <h2>Introduction</h2>
@@ -34,10 +34,10 @@
         companies like Starlink and the EU are working on providing internet access through satellites. Elon Musk’s <a target="_blank" href="https://www.starlink.com/">Starlink</a> is today the largest
         global provider of satellite internet with over 4,500 satellites in orbit. They expect to have 42,000 new ones in orbit in the coming years.</p>
 
-        <img src="media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
+        <img class="topical-photos" src="media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
         <figcaption>Photo: Jeff Ogden</figcaption>
 
-        <img src="media/starlink.jpg" alt="A Starlink Satellite">
+        <img class="topical-photos" src="media/starlink.jpg" alt="A Starlink Satellite">
         <figcaption>Photo: SpaceX</figcaption>
 
 <h2>The Situation</h2>
@@ -50,7 +50,7 @@
     <p>Professions within information technology will benefit from increased internet accessibility around the world, as these professions are often dependent
     on digital technology and the internet. A higher demand for people within information technology is highly likely.</p>
     
-    <img src="media/itprofession.jpg" alt="Two young people viewing a code on a computer screen">
+    <img class="topical-photos" src="media/itprofession.jpg" alt="Two young people viewing a code on a computer screen">
         <figcaption>Photo: Birte Runde</figcaption>
 
         <p>More people worldwide will be able to have online education and access to information through increased internet accessibility. This can result in
@@ -60,7 +60,7 @@
     and convenience to many subjects. For example, people can get better help at becoming more <a target="_blank" href="https://www.forbes.com/health/fitness/best-fitness-apps/">physically active through the use of apps</a> and video
     tutorials of different ways to exercise.</p>
     
-    <img src="media/onlinecommunication.jpg" alt="A phonescreen with multiple apps for online communication">
+    <img class="topical-photos" src="media/onlinecommunication.jpg" alt="A phonescreen with multiple apps for online communication">
         <figcaption>Photo: Jason Howie/flickr.com</figcaption>
 
         <h2>Positives and Negatives</h2>
