--- a/accessibility.html
+++ b/accessibility.html
@@ -17,9 +17,28 @@
 
     <main class="accessibility-main">
         <h1>Accessibility</h1>
-        <div>
+        <div class="container-accessibility">
             <h2>Building Our Page</h2>
-            <p>blabla</p>
+            <p>When getting started on this project we had to split up the workload into three. 
+                We wanted the workload to be proportionate, which ended up being a challenge. 
+                With our group consisting of three members and the goal being four to five pages 
+                of html and one stylesheet, we decided it was best if everyone picked one thing 
+                they would like to do and go from there. Even though the workload turned out 
+                somewhat uneven we were all happy to work because we got to choose. Everyone 
+                picked one or two html page and styled their own css. 
+            </p>
+            <div class="photo-accessibility">
+                <img src="media/p35-laptop-screenshot.png" alt="screenshot of p35 page on a laptop">
+                <img src="media/p35-mobile-screenshot.png" alt="screenshot of p35 page on a mobile phone">
+            </div>
+            <p>The challenging aspect of this project was to get a uniform design for all pages, 
+                to make it as simple as possible everyone contributed with design ideas which we 
+                later adapted to our pages. When styling our pages we utilized a grid layout which 
+                would enable us to set up a two dimensional layout. In addition to using grid, 
+                we also implemented flexbox layouts to effectively align items and distribute space. 
+                To make the pages responsive we decided to use media queries to target various media 
+                features with minimum and/or maximum conditions.
+            </p>
         </div>
         <div>
             <h2>Testing the Code</h2>
