--- a/topicalpage.html
+++ b/topicalpage.html
@@ -35,10 +35,10 @@
         global provider of satellite internet with over 4,500 satellites in orbit. They expect to have 42,000 new ones in orbit in the coming years.</p>
 
         <img class="topical-photos" src="media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
-        <figcaption>Photo: Jeff Ogden</figcaption>
+        <figcaption class="topical-caption">Photo: Jeff Ogden</figcaption>
 
         <img class="topical-photos" src="media/starlink.jpg" alt="A Starlink Satellite">
-        <figcaption>Photo: SpaceX</figcaption>
+        <figcaption class="topical-caption">Photo: SpaceX</figcaption>
 
 <h2>The Situation</h2>
 
@@ -51,7 +51,7 @@
     on digital technology and the internet. A higher demand for people within information technology is highly likely.</p>
     
     <img class="topical-photos" src="media/itprofession.jpg" alt="Two young people viewing a code on a computer screen">
-        <figcaption>Photo: Birte Runde</figcaption>
+        <figcaption class="topical-caption">Photo: Birte Runde</figcaption>
 
         <p>More people worldwide will be able to have online education and access to information through increased internet accessibility. This can result in
     faster resolution of global problems. By bringing the world closer together, it grants possibilities for better cooperation and collaboration.
@@ -61,7 +61,7 @@
     tutorials of different ways to exercise.</p>
     
     <img class="topical-photos" src="media/onlinecommunication.jpg" alt="A phonescreen with multiple apps for online communication">
-        <figcaption>Photo: Jason Howie/flickr.com</figcaption>
+        <figcaption class="topical-caption">Photo: Jason Howie/flickr.com</figcaption>
 
         <h2>Positives and Negatives</h2>
 
