Fikset header/margin problem

--- a/topicalpage.html
+++ b/topicalpage.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="topical-body">
+<body>
 
     <header class="header">
      <a href="index.html">Campuses</a>
@@ -17,6 +17,8 @@
      <a href="canteen.html">Canteens</a>
      <a href="accessibility.html">Accessibility</a>
     </header>
+
+    <div class="topical-body">
 
     <main class="topical-main">
     <h1>The Interplay between Technology and Society</h1>
@@ -79,7 +81,7 @@
         consequences unrelated to internet technologies.</li>
     </ol>
     </section>
-<div>
+
     <img class="topical-photos" src="media/internetaccesss.jpg" alt="Map showcasing internet access throughout the world">
         <figcaption class="topical-caption">Photo: Jeff Ogden</figcaption>
 
