--- a/accessibility.html
+++ b/accessibility.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Accessibility</title>
 </head>
-<body class="accessibility-body">
+<body class="body-accessibility">
     <header class="header">        <!-- header/nav to 5 internal pages containing 1*5 grid for PC and 2*3 for mobile view-->
         <a href="index.html">Campuses</a>
         <a href="topicalpage.html">Topical</a>
@@ -15,40 +15,45 @@
         <a href="accessibility.html">Accessibility</a>
       </header>
 
-    <main class="accessibility-main">
+    <main class="main-accessibility">
         <h1>Accessibility</h1>
         <div class="container-accessibility">
-            <h2>Building Our Page</h2>
-            <p>When getting started on this project we had to split up the workload into three. 
-                We wanted the workload to be proportionate, which ended up being a challenge. 
-                With our group consisting of three members and the goal being four to five pages 
-                of html and one stylesheet, we decided it was best if everyone picked one thing 
-                they would like to do and go from there. Even though the workload turned out 
-                somewhat uneven we were all happy to work because we got to choose. Everyone 
-                picked one or two html page and styled their own css. 
-            </p>
-            <div class="photo-accessibility">
+            <div class="item-one-accessibility">
+                <h2 class="h2-accessibility">Building Our Page</h2>
+                <p>When getting started on this project we had to split up the workload into three. 
+                    We wanted the workload to be proportionate, which ended up being a challenge. 
+                    With our group consisting of three members and the goal being four to five pages 
+                    of html and one stylesheet, we decided it was best if everyone picked one thing 
+                    they would like to do and go from there. Even though the workload turned out 
+                    somewhat uneven we were all happy to work because we got to choose. Everyone 
+                    picked one or two html page and styled their own css. 
+                </p>
+            </div>
+            <div class="item-two-accessibility">
                 <img src="media/p35-laptop-screenshot.png" alt="screenshot of p35 page on a laptop">
                 <img src="media/p35-mobile-screenshot.png" alt="screenshot of p35 page on a mobile phone">
             </div>
-            <p>The challenging aspect of this project was to get a uniform design for all pages, 
-                to make it as simple as possible everyone contributed with design ideas which we 
-                later adapted to our pages. When styling our pages we utilized a grid layout which 
-                would enable us to set up a two dimensional layout. In addition to using grid, 
-                we also implemented flexbox layouts to effectively align items and distribute space. 
-                To make the pages responsive we decided to use media queries to target various media 
-                features with minimum and/or maximum conditions.
-            </p>
-        </div>
-        <div>
-            <h2>Testing the Code</h2>
-            <p>
-                bla bla
-            </p>
-            <img>
-            <p>
-                bla bla
-            </p>
+            <div class="item-three-accessibility">
+                <p>The challenging aspect of this project was to get a uniform design for all pages, 
+                    to make it as simple as possible everyone contributed with design ideas which we 
+                    later adapted to our pages. When styling our pages we utilized a grid layout which 
+                    would enable us to set up a two dimensional layout. In addition to using grid, 
+                    we also implemented flexbox layouts to effectively align items and distribute space. 
+                    To make the pages responsive we decided to use media queries to target various media 
+                    features with minimum and/or maximum conditions. For example on our page about "P35",
+                    as the screen gets smaller in width, the layout of the page changes to accommodate as. 
+                </p>
+            </div>
+            <div>
+                <h2 class="h2-accessibility">Testing the Code</h2>
+                <p>
+                    bla bla
+                </p>
+                <img>
+                <p>
+                    bla bla
+                </p>
+            </div>
         </div>
     </main>
     <footer> 
