--- a/topicalpage.html
+++ b/topicalpage.html
@@ -22,7 +22,6 @@
 
     <main class="topical-main">
         <h1>The Interplay between Technology and Society</h1>
-    <div class="topical-grid-container">
     <h2>Introduction</h2>
 
     <section>
@@ -98,7 +97,8 @@
     <img class="topical-photos" src="media/onlinecommunication.jpg" alt="A phonescreen with multiple apps for online communication">
         <figcaption class="topical-caption">Photo: Jason Howie/flickr.com</figcaption>
     </div>
-    <div><footer> 
+</div>
+<footer> 
         <div class="footer-container"> <!--3 columns in 1*3 grid-->
           <ul>
             <li><b>PAGES DESIGNED & CREATED BY</b></li>
@@ -126,6 +126,5 @@
         </div>
         
        </footer>
-    </div>
 </body>
 </html>
