Fikset canteen mazemap problemer

--- a/canteen.html
+++ b/canteen.html
@@ -68,7 +68,7 @@
                     </ol>
                 </div>
                 <div class="item-six-p35">
-                    <img class="photos-p35" src="media/Mazemap.jpg" alt="Indoor climbing in P35"></div>
+                    <img class="mazemap-photo" src="media/Mazemap.jpg" alt="Indoor climbing in P35"></div>
                     <!-- Photo is taken through screenshot of mazemap, and altered through photoshop) -->
                 </div>
             </div>
