--- a/index.html
+++ b/index.html
@@ -1,70 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet"type="text/css"href="css/style.css">
-  <title>Intorduction</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <link rel="stylesheet"type="text/css"href="css/style.css">
+    <title>Intorduction</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 <header class="header">        <!-- header/nav to 5 internal pages containing 1*5 grid for PC and 2*3 for mobile view-->
-  
-  <a href="index.html">Campuses</a>
-  <a href="topicalpage.html">Topical</a>
-  <a href="p35.html">P35</a>
-  <a href="canteen.html">Canteens</a>
-  <a href="accessibility.html">Accessibility</a>
-</header>
 
+    <a href="index.html">Campuses</a>
+    <a href="topicalpage.html">Topical</a>
+    <a href="p35.html">P35</a>
+    <a href="canteen.html">Canteens</a>
+    <a href="accessibility.html">Accessibility</a>
+</header>
 
 <main class="grid-container">       <!--main 6*3 grid for each section, photos copied from OlsoMet´s website-->
 
+    <h1 class="title1">Olsomet campuses guide!</h1>
+    <h2 class="title2">Campuses</h2>
 
-  <h1 class="title1">Olsomet campuses guide!</h1>
-  <h2 class="title2">Campuses</h2>
-  
-  <p class="ingress">There are two Olsomet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
+    <p class="ingress">There are two Olsomet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
 
-  
-  <div class="image-left"></div>
-  <div class="photo-ref-left">Photo: Oslomet</div>
-  <p class="text-left">Pilestredet Campus is the main Oslomet’s campus, and it takes less than 10 min from the central station centre to get there.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
-  
-  <div class="image-right"></div>
-  <div class="photo-ref-right">Photo: Oslomet</div>
+    <div class="image-left"></div>
+    <div class="photo-ref-left">Photo: Oslomet</div>
+    <p class="text-left">Pilestredet Campus is the main Oslomet’s campus, and it takes less than 10 min from the central station centre to get there.<br><br><br>Here is the map:<a href="">Oslo site</a></p>
 
-  <p class="text-right">Kjeller Campus is located in Lillestrøm which is only 20 kilometers outside of Oslo and with good connections of public transport.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
-   
+    <div class="image-right"></div>
+    <div class="photo-ref-right">Photo: Oslomet</div>
+
+    <p class="text-right">Kjeller Campus is located in Lillestrøm which is only 20 kilometers outside of Oslo and with good connections of public transport.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
+
 </main>     
 
 <footer> 
- <div class="footer-container"> <!--3 columns in 1*3 grid-->
-   <ul>
-     <li><b>PAGES DESIGNED & CREATED BY</b></li>
-     <li>Student ID: 385509</li> 
-     <li>Student ID: 385530</li>
-     <li>Student ID: 385324</li>
-  </ul>
-</div>
+	<div class="footer-container"> <!--3 columns in 1*3 grid-->
+		<ul>
+			<li><b>PAGES DESIGNED & CREATED BY</b></li>
+			<li>Student ID: 385509</li> 
+			<li>Student ID: 385530</li>
+			<li>Student ID: 385324</li>
+		</ul>
+	</div>
 
-<div class="footer-container"> 
-  <ul>
-     <li><b>CONTACT INFORMATION</b></li>
-     <li><a href="Contact us">Contact us</li>
-     <li><a href="Find us">Find us</li>
-     <li><a href="Support us">Support us</li>
-  </ul> 
-</div>
+	<div class="footer-container"> 
+		<ul>
+			<li><b>CONTACT INFORMATION</b></li>
+			<li><a href="Contact us">Contact us</a></li>
+			<li><a href="Find us">Find us</a></li>
+			<li><a href="Support us">Support us</a></li>
+		</ul> 
+	</div>
 
- <div class="footer-container">  
-  <ul>
-     <li><b>ABOUT THE WEBSITE</b></li>
-     <li><a href="Cookies policy">Cookies policy</li>
-     <li><a href="Accessibility statement">Accessibility statement</li>
-  </ul>
- </div>
- 
+	<div class="footer-container">  
+		<ul>
+			<li><b>ABOUT THE WEBSITE</b></li>
+			<li><a href="Cookies policy">Cookies policy</a></li>
+			<li><a href="Accessibility statement">Accessibility statement</a></li>
+		</ul>
+	</div>
+    
 </footer>
 </body>
 </html>
