--- a/canteen.html
+++ b/canteen.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Canteens includes information related to the canteens and food found around OsloMet campus Pilestredet"/>
     <title>Canteen</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
