--- a/topicalpage.html
+++ b/topicalpage.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Topical</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Topical page drafts possible outcomes related to increased internet access"/>
 </head>
-
 <body>
 
     <header class="header">
