--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="image-right"></div>
     <div class="photo-ref-right">Photo: Oslomet</div>
 
-    <p class="text-right">Kjeller Campus is located in Lillestrøm which is only 20 kilometers outside of Oslo and with good connections of public transport.<br><br>Here is the map:<a href="">Kjeller site</a></p> 
+    <p class="text-right">Kjeller Campus is located in Lillestrøm which is only 20 kilometers outside of Oslo and with good connections of public transport.<br><br><br>Here is the map:<a href="">Kjeller site</a></p> 
 
 </main>     
 
