lagt til kommentarer

--- a/canteen.html
+++ b/canteen.html
@@ -15,7 +15,8 @@
     <a href="canteen.html">Canteens</a>
     <a href="accessibility.html">Accessibility</a>
 </header>
-    <!--every class name ends with "p35" to make it clear in the css the class belongs to this page-->
+   
+<!-- class names are that of the p35 page, to keep the design almost identical-->
 
 <main class="main-p35">
     <h1 class="h1-p35">OsloMet Pilestredet Canteens</h1>
@@ -38,9 +39,9 @@
             </p>
         </div>
         <div class="item-two-p35">
-            <!--images taken from the web followed by a span to mention the source -->
 
-            <img class="photos-p35" src="media/canteenoslomet.jpg" alt="Canteen on OsloMet Campus">
+
+            <img class="photos-p35" src="media/canteenoslomet.jpg" alt="Canteen on OsloMet Campus"> <!--images taken from the web followed by a span to mention the source -->
             <span class="photo-credit-p35">Photo: Sofie Knobel Breiby</span>
         </div>
         <div class="item-three-p35">
