Endret farge topical page, lagt til innhold canten

--- a/canteen.html
+++ b/canteen.html
@@ -62,11 +62,11 @@
         <div class="item-five-p35">
             <h2 class="h2-p35">Top Canteens in Pilestredet</h2>
             <ol>
-                <li>x</li>
-                <li>x</li>
-                <li>x</li>
-                <li>x</li>
-                <li>x</li>
+                <li>Nullam Neque Nibh</li>
+                <li>Dignissim Elementum</li>
+                <li>Maecenas</li>
+                <li>Phasellus</li>
+                <li>Eget Dolor</li>
             </ol>
         </div>
         <div class="item-six-p35">
