--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet"type="text/css"href="css/style.css">
+	<meta name="description" content="Campuses page contains information about Oslomet´s Pilestredet and Kjeller campuses"/>
     <title>Intorduction</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
