endret margin og korrigerte skrivefeil

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <a href="accessibility.html">Accessibility</a>
 </header>
 
-<main class="grid-container">       <!--main 6*3 grid for each section, photos copied from OlsoMet´s website-->
+<main class="grid-container">       <!--main 6*3 grid for each section, photos copied from OsloMet´s website-->
 
-    <h1 class="title1">Olsomet campuses guide!</h1>
+    <h1 class="title1">Oslomet campuses guide!</h1>
     <h2 class="title2">Campuses</h2>
-
-    <p class="ingress">There are two Olsomet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
+	
+    <p class="ingress">There are two Oslomet campuses. One is located in the centre of Oslo, and it is the largest among the two. The other campus is located in Kjeller which is near the city of Lillestrøm.<br><br> </p>
 
     <div class="image-left"></div>
     <div class="photo-ref-left">Photo: Oslomet</div>
