La til meta description

--- a/p35.html
+++ b/p35.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P35 Building</title>
+    <meta name="description" content="General information about OsloMet's P35 building">
     <link rel="stylesheet" href="css/style.css">
+    <title>P35 Building</title>
 </head>
 
 <body class="body-p35">
