--- a/accessibility.html
+++ b/accessibility.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Developement of the site and results from the accessibility testing">
     <link rel="stylesheet" href="css/style.css">
     <title>Accessibility</title>
 </head>
