--- a/accessibility.html
+++ b/accessibility.html
@@ -22,7 +22,7 @@
     <div class="container-accessibility">
         <div class="item-one-accessibility">
             <h2 class="h2-accessibility">Building Our Page</h2>
-            <p>When getting started on this project we had to split up the workload into three. 
+            <p class="p-accessibility">When getting started on this project we had to split up the workload into three. 
                 We wanted the workload to be proportionate, which ended up being a challenge. 
                 With our group consisting of three members and the goal being four to five pages 
                 of html and one stylesheet, we decided it was best if everyone picked one thing 
@@ -36,7 +36,7 @@
             <img src="media/p35-mobile-screenshot.png" alt="screenshot of p35 page on a mobile phone">
         </div>
         <div class="item-three-accessibility">
-            <p>The challenging aspect of this project was to get a uniform design for all pages, 
+            <p class="p-accessibility">The challenging aspect of this project was to get a uniform design for all pages, 
                 to make it as simple as possible everyone contributed with design ideas which we 
                 later adapted to our pages. When styling our pages we utilized a grid layout which 
                 would enable us to set up a two dimensional layout. In addition to using grid, 
