--- a/canteen.html
+++ b/canteen.html
@@ -7,16 +7,14 @@
     <title>Canteen</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="body-p35">
+<body class="body-p35"> <!-- class names are that of the p35 page, to keep the design almost identical-->
 <header class="header">        <!-- header/nav to 5 internal pages containing 1*5 grid for PC and 2*3 for mobile view-->
     <a href="index.html">Campuses</a>
     <a href="topicalpage.html">Topical</a>
     <a href="p35.html">P35</a>
     <a href="canteen.html">Canteens</a>
     <a href="accessibility.html">Accessibility</a>
-</header>
-   
-<!-- class names are that of the p35 page, to keep the design almost identical-->
+</header>  
 
 <main class="main-p35">
     <h1 class="h1-p35">OsloMet Pilestredet Canteens</h1>
@@ -70,8 +68,8 @@
             </ol>
         </div>
         <div class="item-six-p35">
-            <img class="mazemap-photo" src="media/Mazemap.jpg" alt="Indoor climbing in P35"></div>
-            <!-- Photo is taken through screenshot of mazemap, and altered through photoshop) -->
+            <img class="mazemap-photo" src="media/Mazemap.jpg" alt="Indoor climbing in P35"></div> <!-- This photo were given a separeate class to accomodate for the image not stretching well -->
+            <!-- Photo is taken through screenshot of mazemap, and altered through photoshop -->
         </div>
     </div>
 </main>
