--- a/topicalpage.html
+++ b/topicalpage.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<header class="header">
+<header class="header"> <!-- header/nav to 5 internal pages containing 1*5 grid for PC and 2*3 for mobile view-->
     <a href="index.html">Campuses</a>
     <a href="topicalpage.html">Topical</a>
     <a href="p35.html">P35</a>
@@ -18,12 +18,12 @@
     <a href="accessibility.html">Accessibility</a>
 </header>
 
-<main class="topical-main">
+<main class="topical-main"> <!-- consists of a grid column set to auto-->
     <section class="topical-page">
         <h1>The Interplay between Technology and Society</h1>
         <h2>Introduction</h2>
 
-        <div class="items-topical">
+        <div class="items-topical"> <!-- topical "items" is text and photos that are separated for better flexibility in CSS -->
             <p>Today the global infrastructure of the internet is,
                 to a large degree, dependent on physical 
                 <a target="_blank" href="https://www.submarinecablemap.com/">subsea</a>
